2009-03-06  Tao Wang  <dancefire@gmail.com>

	* cpp/include/openclas/segment.hpp:
		Add Segment::segment_type.
		Rewrite segment_to_string().
		Rewrite segment() with 2 overloads.
		Change get_overall_k_shortest_path() to protected.
	* cpp/src/unit_test/unit_test.cpp: Remove include of unit_test_builder.hpp.
	* cpp/src/unit_test/unit_test_k_shortest_path.hpp: Should include segment.hpp, rather than builder.hpp.
	* cpp/src/unit_test/unit_test_segment.hpp:
		Minor modification of test_segment().
		Add new testcases for Segment::segment() and Segment::segment_to_string().
	* cpp/src/unit_test/unit_test_utility.hpp: Commented testcases for locale GB2312, which is never used.

2009-03-05  Tao Wang  <dancefire@gmail.com>

	* cpp/include/openclas/builder.hpp:
	* cpp/include/openclas/segment.hpp:
		Remove segment.hpp and rename builder.hpp to segment.hpp.
		Rename class Builder to Segment.
		Add bool WordInformation::operator==().
		Add 3 overload segment_to_string().
		Add segment().
		Add get_words_from_path().
		Add find_k_best_segments().
		Rename create() to create_graphs().
	* cpp/src/unit_test/OpenClas_VS2005.vcproj:
	* cpp/src/unit_test/OpenClas_VS2008.vcproj:
		Remove the link to unit_test_builder
	* cpp/src/unit_test/unit_test_builder.hpp:
	* cpp/src/unit_test/unit_test_segment.hpp:
		Remove unit_test_segment.hpp and rename unit_test_builder.hpp to unit_test_segment.hpp
		Add partial testcases for Segment::segment().


2009-03-04  Tao Wang  <dancefire@gmail.com>

	* cpp/include/openclas/builder.hpp:
		Add graph_terminal_t for graph property.
		Define GraphProperty.
		Change std::vector<WordGraph> to std::vector<shared_ptr<WordGraph> >.
		Remove lines for setting index in create_out_table.
		Put all [Begin], [End] related code to create_graph().
		Rewrite create_graphs() and create_graph().
		Add add_edge_to_graph().
		Change WORD_TAG_W kind of atom to special word.	
	* cpp/include/openclas/dictionary.hpp
		Minor changes for some const function in Dictionary.