@@ -389,7 +389,7 @@ BOOST_AUTO_TEST_CASE( test_Segment_create_single_sentence )
 	BOOST_CHECK( Segment::segment_to_string(text, segs[2]) ==
 		L"19９5/m 年底/ ｇoｏgｌｅ/nx 在/ 1/m 月份/n 大会/n 上/ 说/ 的确/d 实/ 在理/a 。/w" );
 
-	wcout.imbue(locale_utf8);
+	wcout.imbue(locale_gbk);
 	wcout << "Original text: " << text << std::endl;
 	for (size_t i = 0; i < segs.size(); ++i)
 	{
@@ -403,7 +403,7 @@ BOOST_AUTO_TEST_CASE( test_Segment_segment_single_sentence )
     Dictionary dict;
 	
 	construct_dictionary(dict);
-	load_from_file(dict, "data/core.ocd");
+	load_from_ocd_file(dict, "data/core.ocd");
 
 	std::wofstream out("Segment.txt");
 	out.imbue(locale_utf8);
